--- a/templates/common/profile.html
+++ b/templates/common/profile.html
@@ -3,16 +3,33 @@
     <div class="container my-3">
         {% csrf_token %}
         {% include "form_errors.html" %}
-        <div class="form-group">
-            <label for="username">사용자 이름</label>
-            <input type="text" class="form-control" name="username" disabled="TRUE" id="username"
-                   value="{{ user.username |default_if_none:'' }}">
-        </div>
-        <div class="form-group">
-            <label for="email">이메일</label>
-            <input type="text" class="form-control" name="email" disabled="TRUE" id="email"
-                   value="{{ user.email | default_if_none:'' }}">
-        </div>
+        <form method="post" class="post-form" action="{% url 'common:change' request.user.id %}">
+            {% csrf_token %}
+            {% include "form_errors.html" %}
+            {% if request.user %}
+            <div class="form-group">
+                <label for="username">사용자 이름</label>
+                <input type="text" class="form-control" name="username" readonly id="username"
+                       value="{{ request.user.username|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="password1">비밀번호</label>
+                <input type="password" class="form-control" name="password1" id="password1"
+                       value="{{ form.password1|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="password2">비밀번호 확인</label>
+                <input type="password" class="form-control" name="password2" id="password2"
+                       value="{{ form.password2|default_if_none:'' }}">
+            </div>
+            <div class="form-group">
+                <label for="email">이메일</label>
+                <input type="text" class="form-control" name="email" readonly id="email"
+                       value="{{ request.user.email|default_if_none:'' }}">
+            </div>
+            <button type="submit" class="btn btn-primary">변경하기</button>
+            {% endif %}
+        </form>
     </div>
     <table class="table">
         <thead>
